@@ -1,7 +1,7 @@
 /**********************************************************************
  * $Source: /home/xubuntu/berlios_backup/github/tmp-cvs/jverein/Repository/jverein/src/de/jost_net/JVerein/gui/control/BuchungsuebernahmeControl.java,v $
- * $Revision: 1.18 $
- * $Date: 2011/01/15 09:46:49 $
+ * $Revision: 1.19 $
+ * $Date: 2011/02/12 09:29:45 $
  * $Author: jost $
  *
  * Copyright (c) by Heiner Jostkleigrewe
@@ -9,7 +9,10 @@
  * heiner@jverein.de
  * www.jverein.de
  * $Log: BuchungsuebernahmeControl.java,v $
- * Revision 1.18  2011/01/15 09:46:49  jost
+ * Revision 1.19  2011/02/12 09:29:45  jost
+ * Statische Codeanalyse mit Findbugs
+ *
+ * Revision 1.18  2011-01-15 09:46:49  jost
  * Tastatursteuerung wegen Problemen mit Jameica/Hibiscus wieder entfernt.
  *
  * Revision 1.17  2011-01-11 17:41:10  jost
@@ -73,6 +76,7 @@ import de.jost_net.JVerein.gui.input.KontoauswahlInput;
 import de.jost_net.JVerein.gui.menu.BuchungMenu;
 import de.jost_net.JVerein.rmi.Buchung;
 import de.jost_net.JVerein.rmi.Konto;
+import de.jost_net.JVerein.util.JVDateFormatTTMMJJJJ;
 import de.willuhn.datasource.rmi.DBIterator;
 import de.willuhn.datasource.rmi.DBService;
 import de.willuhn.datasource.rmi.ResultSetExtractor;
@@ -196,8 +200,8 @@ public class BuchungsuebernahmeControl extends AbstractControl
 
   public Part getBuchungsList() throws RemoteException
   {
-    Integer hibid = new Integer(-1);
-    Integer jvid = new Integer(-1);
+    Integer hibid = Integer.valueOf(-1);
+    Integer jvid = Integer.valueOf(-1);
     Konto k = (Konto) getKonto().getValue();
     if (k != null && k.getHibiscusId() != null)
     {
@@ -215,9 +219,9 @@ public class BuchungsuebernahmeControl extends AbstractControl
       {
         if (!rs.next())
         {
-          return new Integer(0);
+          return Integer.valueOf(0);
         }
-        return new Integer(rs.getInt(1));
+        return Integer.valueOf(rs.getInt(1));
       }
     };
     Integer maximum = (Integer) service.execute(sql, new Object[] {}, rs);
@@ -239,7 +243,7 @@ public class BuchungsuebernahmeControl extends AbstractControl
         buchungsList = new TablePart(hibbuchungen, null);
         buchungsList.addColumn("Nr", "id");
         buchungsList.addColumn("Datum", "datum", new DateFormatter(
-            Einstellungen.DATEFORMAT));
+            new JVDateFormatTTMMJJJJ()));
         buchungsList.addColumn("Name", "name");
         buchungsList.addColumn("Verwendungszweck", "zweck");
         buchungsList.addColumn("Verwendungszweck 2", "zweck2");
